<resources>
    <string name="app_name">Doctor</string>
    <string name="_254">+254-</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="we_will_send_you_one_time_password_on_this_mobile_number">We will send you one time password on this mobile number</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="_1234567890">1234567890</string>
    <string name="get_otp">GET OTP</string>
    <string name="enter_otp_send_to">Enter OTP send to</string>
    <string name="didn_t_receive_the_otp">Didn\'t receive the OTP?</string>
    <string name="resend_code">Resend Code</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="send_otp">Send OTP</string>
    <string name="verify">Verify</string>
    <string name="_0740569496">0740569496</string>
    <string name="title_activity_homepage">Homepage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_launcher_home">LauncherHome</string>
</resources>