<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none"
    android:layout_height="match_parent"
    tools:context=".VerifyOTPActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otp_verification"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="120dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_otp_send_to"
            android:textSize="14sp"
            android:layout_marginTop="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textMobile"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:textStyle="bold"
            android:layout_marginTop="4dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/inputcode1"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:textSize="24sp"
                android:inputType="number"
                android:maxLength="1"
               android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:textStyle="bold"
                android:textColor="@color/black"
                tools:ignore="LabelFor"/>
            <EditText
                android:id="@+id/inputcode2"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:textSize="24sp"
                android:inputType="number"
                android:maxLength="1"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:textStyle="bold"
                android:textColor="@color/black"
                tools:ignore="LabelFor" />
            <EditText
                android:id="@+id/inputcode3"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:textSize="24sp"
                android:inputType="number"
                android:maxLength="1"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:textStyle="bold"
                android:textColor="@color/black"
                tools:ignore="LabelFor" />
            <EditText
                android:id="@+id/inputcode4"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:textSize="24sp"
                android:inputType="number"
                android:maxLength="1"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:textStyle="bold"
                android:textColor="@color/black"
                tools:ignore="LabelFor" />
            <EditText
                android:id="@+id/inputcode5"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:textSize="24sp"
                android:inputType="number"
                android:maxLength="1"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:textStyle="bold"
                android:textColor="@color/black"
                tools:ignore="LabelFor" />
            <EditText
                android:id="@+id/inputcode6"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:textSize="24sp"
                android:inputType="number"
                android:maxLength="1"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:textStyle="bold"
                android:textColor="@color/black"
                tools:ignore="LabelFor" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:text="@string/didn_t_receive_the_otp"/>
            <TextView
                android:id="@+id/textResendOTP"
                android:layout_width="wrap_content"
                android:layout_marginStart="15dp"
                android:textColor="@color/purple_500"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="15sp"
                android:text="@string/resend_otp"/>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonVerify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:text="@string/verify"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="16sp"
            android:background="@color/purple_500"/>




    </LinearLayout>

</ScrollView>